--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 VGApp.xcodeproj/project.xcworkspace/xcuserdata/akora.xcuserdatad/UserInterfaceState.xcuserstate
 .DS_Store
+.xcworkspace
+xcuserdata/
