Update recycle View

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ VGApp.xcodeproj/project.xcworkspace/xcuserdata/akora.xcuserdatad/UserInterfaceSt
 .DS_Store
 .xcworkspace
 xcuserdata/
+VGApp.xcworkspace/xcshareddata
